force-app/main/default/objects/Design_Job__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviation_Text__c</fullName>
        <label>Abbreviation Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_for_Board_Only__c</fullName>
        <inlineHelpText>These comments cannot be viewed by Ashley, and will be summarised to the Group board at the end of an academic year.</inlineHelpText>
        <label>Comment for Board Only</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_in_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact in School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Design Jobs</relationshipLabel>
        <relationshipName>Design_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Subject__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Requested__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Delayed_Advanced_Formula__c</fullName>
        <formula>Date_Completed__c -  Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Delayed(-)/Advanced(+) Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Delayed_Advanced__c</fullName>
        <formula>IF( TEXT(Due_Date__c) =&quot;&quot;,&quot;No Deadline&quot;, TEXT(Days_Delayed_Advanced_Formula__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete v Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Given_to_Complete_Formula__c</fullName>
        <formula>Due_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Given to Complete Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Given_to_Complete__c</fullName>
        <formula>IF(TEXT( Due_Date__c) =&quot;&quot;,&quot;No Deadline&quot;,TEXT( Days_Given_to_Complete_Formula__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Given to Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Category__c</fullName>
        <label>Design Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Digital Library</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date_Revision_Request__c</fullName>
        <label>Due Date Revision Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ebooks_Added__c</fullName>
        <label>Ebooks Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Work__c</fullName>
        <label>Hours of Work</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiated_By_Designer__c</fullName>
        <formula>IF(  CreatedBy.CompanyName  =&quot;Group Designer&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiated By Designer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_File__c</fullName>
        <label>Link to File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Action</label>
        <referenceTo>Marketing_Action__c</referenceTo>
        <relationshipLabel>Design Jobs</relationshipLabel>
        <relationshipName>Design_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Rating_Required_New__c</fullName>
        <formula>IF ( AND ( CreatedBy.Profile.Name = &quot;Group Designer (Full)&quot;, TEXT(Work_For_Override__c) = &quot;No Override&quot; ), TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Rating Required (New)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Rating_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Rating Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Job</label>
        <referenceTo>Design_Job__c</referenceTo>
        <relationshipLabel>Follow On Jobs</relationshipLabel>
        <relationshipName>Follow_On_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>IF( Due_Date__c &lt;TODAY(),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Satisfaction__c</fullName>
        <label>Rate Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Rated</fullName>
                    <default>true</default>
                    <label>Not Rated</label>
                </value>
                <value>
                    <fullName>1 Star</fullName>
                </value>
                <value>
                    <fullName>2 Stars</fullName>
                </value>
                <value>
                    <fullName>3 Stars</fullName>
                </value>
                <value>
                    <fullName>4 Stars</fullName>
                </value>
                <value>
                    <fullName>5 Stars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Image__c</fullName>
        <formula>IMAGE( CASE( Rate_Satisfaction__c , &quot;1 Star&quot;, &quot;/servlet/servlet.FileDownload?file=015D0000001R9ww&quot;, 

&quot;2 Stars&quot;, &quot;/servlet/servlet.FileDownload?file=015D0000001R9x1&quot;, 

&quot;3 Stars&quot;, &quot;/servlet/servlet.FileDownload?file=015D0000001R9x6&quot;, 

&quot;4 Stars&quot;,&quot;/servlet/servlet.FileDownload?file=015D0000001R9xB&quot;, 

&quot;5 Stars&quot;,&quot;/servlet/servlet.FileDownload?file=015D0000001R9xG&quot;,&quot;/img/samples/stars_000.gif&quot;), &quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_of_Job__c</fullName>
        <inlineHelpText>Examples: 
Quick and Easy Jobs - Typo Corrections, quick website updates or very small corrections
Normal or Routine: Web News items, Newsletters, Ads,  Update to Publications
Major Jobs: Yearbooks, New Publications or New Website</inlineHelpText>
        <label>Scope of Job</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rate_Satisfaction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quick &amp; Easy</fullName>
                </value>
                <value>
                    <fullName>Normal or Routine</fullName>
                </value>
                <value>
                    <fullName>Major Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Job_Cancelled__c = TRUE,&quot;Cancelled&quot;,IF( TEXT(Date_Completed__c)&lt;&gt;&quot;&quot;,&quot;Completed&quot;,&quot;On Going&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeightedRating__c</fullName>
        <formula>(IF( TEXT(Rate_Satisfaction__c) = &quot;1 Stars&quot;,1,

IF( TEXT(Rate_Satisfaction__c) = &quot;2 Stars&quot;,2,

IF( TEXT(Rate_Satisfaction__c) = &quot;3 Stars&quot;,3,

IF( TEXT(Rate_Satisfaction__c) = &quot;4 Stars&quot;,4,

IF( TEXT(Rate_Satisfaction__c) = &quot;5 Stars&quot;,5

,0))))))

*(IF( TEXT(Scope_of_Job__c)=&quot;Normal or Routine&quot;,1,

(IF( TEXT(Scope_of_Job__c)=&quot;Quick &amp; Easy&quot;,0.8,

1.5))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_For_Override__c</fullName>
        <label>Work For (Override)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>The British Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>King&apos;s College Beijing</fullName>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British School of Guangzhou</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>Ukraine International School</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_For__c</fullName>
        <formula>IF( TEXT( Work_For_Override__c ) = &quot;No Override&quot;, TEXT(CreatedBy.School__c), TEXT(Work_For_Override__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work For</label>
        <type>Text</type>
    </fields>
    <label>Design Job</label>
    <listViews>
        <fullName>Jobs_Overdue</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Work_For__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Overdue__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Going</value>
        </filters>
        <label>1C. Jobs Overdue</label>
    </listViews>
    <listViews>
        <fullName>Jobs_Pending_Completion_This_Month</fullName>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Work_For__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Going</value>
        </filters>
        <label>1D. Jobs Pending Completion This Month</label>
    </listViews>
    <listViews>
        <fullName>Jobs_Pending_Rating</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Work_For__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Rate_Satisfaction__c</field>
            <operation>equals</operation>
            <value>Not Rated</value>
        </filters>
        <filters>
            <field>Date_Completed__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Rate_Satisfaction__c</field>
            <operation>equals</operation>
        </filters>
        <label>1E. Jobs Pending Rating</label>
    </listViews>
    <listViews>
        <fullName>X1A_My_Design_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Data_Requested__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Work_For__c</columns>
        <filterScope>Mine</filterScope>
        <label>1A. My Design Jobs</label>
    </listViews>
    <listViews>
        <fullName>X1B_My_Open_Design_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Data_Requested__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Work_For__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Going</value>
        </filters>
        <label>1B. My Open Design Jobs</label>
    </listViews>
    <listViews>
        <fullName>X2A_Ads_Completed_with_Good_Ratings</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Work_For__c</columns>
        <columns>Link_to_File__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>WeightedRating__c</field>
            <operation>greaterThan</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Design_Category__c</field>
            <operation>equals</operation>
            <value>Advertising</value>
        </filters>
        <label>2A. Ads Completed with Good Ratings</label>
    </listViews>
    <listViews>
        <fullName>X2B_Publicat_Completed_with_Good_Ratings</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Work_For__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>WeightedRating__c</field>
            <operation>greaterThan</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Design_Category__c</field>
            <operation>equals</operation>
            <value>Publication</value>
        </filters>
        <label>2B. Publicat Completed with Good Ratings</label>
    </listViews>
    <listViews>
        <fullName>X3A_My_School_s_Jobs_Moscow</fullName>
        <columns>NAME</columns>
        <columns>Design_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Data_Requested__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Work_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_School__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <label>3A. My School&apos;s Jobs (Moscow)</label>
    </listViews>
    <listViews>
        <fullName>X3B_All_Design_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Work_For__c</columns>
        <columns>Copy_Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Hours_of_Work__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>3B. All Design Jobs</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Jobs</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_Complete_before_rate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Date_Completed__c)=&quot;&quot;,TEXT(Rate_Satisfaction__c)&lt;&gt;&quot;&quot;,TEXT(Rate_Satisfaction__c)&lt;&gt;&quot;Not Rated&quot;)</errorConditionFormula>
        <errorMessage>You cannot rate a task before a &quot;Completed Date&quot; is entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_Category_when_Ebooks_are_added</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT(Design_Category__c )&lt;&gt; &quot;Digital Library&quot;, Ebooks_Added__c &gt;0)</errorConditionFormula>
        <errorMessage>Select &quot;Digital Library&quot; as Design category when stating Ebooks have been added.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_Contact_Details_filled_in</fullName>
        <active>true</active>
        <description>Checks_Contact_Details_filled_in when not Group Designer</description>
        <errorConditionFormula>AND(
    OR(
       Contact_Email__c = &quot;&quot;,
       Contact_Person__c = &quot;&quot;
       ),
    TEXT(Work_For_Override__c) != &quot;The British Schools Foundation&quot;
    )</errorConditionFormula>
        <errorMessage>Please enter a Contact Person and an Email Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_No_Rating_is_made_is_checked_No_R</fullName>
        <active>true</active>
        <description>Checks No Rating is made is checked No Rating required</description>
        <errorConditionFormula>AND( No_Rating_Required__c =TRUE, TEXT(Rate_Satisfaction__c )&lt;&gt;&quot;Not Rated&quot;)</errorConditionFormula>
        <errorMessage>A Satisfaction Rating cannot be made if the field &quot;No Rating Required&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_Scope_of_Job_is_completed</fullName>
        <active>true</active>
        <description>Checks Scope of Job is completed if a rating is made</description>
        <errorConditionFormula>AND( TEXT( Scope_of_Job__c )=&quot;&quot;, TEXT(Rate_Satisfaction__c )&lt;&gt;&quot;Not Rated&quot;)</errorConditionFormula>
        <errorMessage>You must complete &quot;Scope of Job&quot; field, when entering a rating.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_Work_For_is_assigned</fullName>
        <active>false</active>
        <errorConditionFormula>AND (CreatedBy.CompanyName =&quot;Group Designer&quot;, 



OR(TEXT( Work_For_Override__c ) =&quot;No Override&quot;,TEXT(Work_For_Override__c) =&quot;None&quot;,TEXT(Work_For_Override__c) =&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Abbreviation_Text__c</errorDisplayField>
        <errorMessage>If the record is created by the Group Designer, you must select a &quot;Work For (Override)&quot; option, to ensure the hours are properly assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_if_amount_of_hours_are_registered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(Hours_of_Work__c  &lt;= 0,TEXT(Hours_of_Work__c)=&quot;&quot;), TEXT(Date_Completed__c)&lt;&gt;&quot;&quot;)</errorConditionFormula>
        <errorMessage>You must register the number of Hours work to complete, if a completion date is added.</errorMessage>
    </validationRules>
</CustomObject>